force-app/main/default/objects/Case/fields/Boat_VIN__c.field-meta.xml
<CustomField>
    <fullName>Boat_VIN__c</fullName>
    <label>Boat VIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>