force-app/main/default/objects/Case/fields/Can_Add_Parts__c.field-meta.xml
<CustomField>
    <fullName>Can_Add_Parts__c</fullName>
    <formula>IF( OR(ISPICKVAL(Status,&#39;New&#39;),ISPICKVAL(Status,&#39;In Review&#39;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Add Parts?</label>
    <type>Checkbox</type>
</CustomField>