force-app/main/default/objects/Case/fields/Case_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Case_Exchange_Rate__c</fullName>
    <description>Budgeted exchange rate used to calculate amount recovered in Canadian dollars</description>
    <label>Case Exchange Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>