force-app/main/default/objects/Case/fields/Date_Failure__c.field-meta.xml
<CustomField>
    <fullName>Date_Failure__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Failure</label>
    <type>Date</type>
</CustomField>