force-app/main/default/objects/Case/fields/Delay_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reasons__c</fullName>
    <label>Delay Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hull Return</fullName>
            </value>
            <value>
                <fullName>Pause for Season</fullName>
            </value>
            <value>
                <fullName>Waiting for more information from partner</fullName>
            </value>
            <value>
                <fullName>Waiting for part numbers or info from supplier</fullName>
            </value>
            <value>
                <fullName>Waiting for part numbers to be created in Salesforce</fullName>
            </value>
            <value>
                <fullName>Waiting for part return from partner</fullName>
            </value>
            <value>
                <fullName>Waiting for Parts to Ship</fullName>
            </value>
            <value>
                <fullName>Waiting for pictures from partner</fullName>
                <isActive>false</isActive>
                <label>Waiting for pictures from partner</label>
            </value>
            <value>
                <fullName>Waiting for supplier approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>