force-app/main/default/objects/Case/fields/Denied_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Denied_Reasons__c</fullName>
    <label>Denied Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicate claim</fullName>
            </value>
            <value>
                <fullName>Lack of information provided</fullName>
            </value>
            <value>
                <fullName>Misuse or abuse</fullName>
            </value>
            <value>
                <fullName>Not original owner</fullName>
            </value>
            <value>
                <fullName>Not warranty</fullName>
            </value>
            <value>
                <fullName>Warranty expires (6 year Wow)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>