force-app/main/default/objects/Case/fields/Estimated_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival_Date__c</fullName>
    <description>Estimated Date of Arrival of parts that have been ordered with the longest expected delivery being set in this field.</description>
    <label>Estimated Arrival Date</label>
    <type>Date</type>
</CustomField>