force-app/main/default/objects/Case/fields/Goodwill_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Goodwill_Reasons__c</fullName>
    <label>No Recovery Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer error covered by DSM</fullName>
            </value>
            <value>
                <fullName>Rigging damage</fullName>
            </value>
            <value>
                <fullName>Rigging error</fullName>
            </value>
            <value>
                <fullName>Shipping damage</fullName>
            </value>
            <value>
                <fullName>Supplier denied coverage</fullName>
            </value>
            <value>
                <fullName>Yard damage</fullName>
            </value>
            <value>
                <fullName>Requested information not provided</fullName>
            </value>
            <value>
                <fullName>No Charge Bulk Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>