force-app/main/default/objects/Case/fields/Inquiry_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Product_Name__c</fullName>
    <label>Inquiry Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>