force-app/main/default/objects/Case/fields/Issue_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reported_By__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Reported By</label>
    <type>Text</type>
</CustomField>