force-app/main/default/objects/Case/fields/Jira_Issue__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue__c</fullName>
    <label>Jira Issue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>