force-app/main/default/objects/Case/fields/Jira_Project__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project__c</fullName>
    <label>Jira Project</label>
    <length>50</length>
    <type>Text</type>
</CustomField>