force-app/main/default/objects/Case/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved for Repair</fullName>
            </value>
            <value>
                <fullName>Ready for Pickup</fullName>
            </value>
            <value>
                <fullName>Ready for Return to Factory Store</fullName>
            </value>
            <value>
                <fullName>Ready for Return to Dealer</fullName>
            </value>
            <value>
                <fullName>Assessing for Course of Action</fullName>
            </value>
            <value>
                <fullName>Prepping for Return to Whitefish</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Verify Smoker Repair</fullName>
            </value>
            <value>
                <fullName>Being Repaired at Factory</fullName>
            </value>
            <value>
                <fullName>Recovery Pending</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Repairing in Whitefish</fullName>
            </value>
            <value>
                <fullName>Returned from Factory</fullName>
            </value>
            <value>
                <fullName>To Be Returned from Factory</fullName>
            </value>
            <value>
                <fullName>Hull Replacement</fullName>
            </value>
            <value>
                <fullName>Repaired - Waiting for Smoker to Ship Back</fullName>
            </value>
            <value>
                <fullName>Awaiting Return to Client</fullName>
            </value>
            <value>
                <fullName>Dealer will Deliver Boat</fullName>
            </value>
            <value>
                <fullName>Dealer will Pickup Boat</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>In Service Lineup</fullName>
            </value>
            <value>
                <fullName>Temp Repair Paused for Season</fullName>
            </value>
            <value>
                <fullName>Updated Recently</fullName>
            </value>
            <value>
                <fullName>In Barrie</fullName>
            </value>
            <value>
                <fullName>In Montreal</fullName>
            </value>
            <value>
                <fullName>Being Contested</fullName>
            </value>
            <value>
                <fullName>60/60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>