force-app/main/default/objects/Case/fields/Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labor Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>