force-app/main/default/objects/Case/fields/Motor_Make__c.field-meta.xml
<CustomField>
    <fullName>Motor_Make__c</fullName>
    <label>Motor Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>