force-app/main/default/objects/Case/fields/Part_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Part_Order_Status__c</fullName>
    <description>Dealer care team to set the status and have it exposed on the</description>
    <label>Warranty Part Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Back Ordered</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <isActive>false</isActive>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Parts on Order</fullName>
                <isActive>false</isActive>
                <label>Parts on Order</label>
            </value>
            <value>
                <fullName>Pending Part Return</fullName>
                <isActive>false</isActive>
                <label>Pending Part Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>