force-app/main/default/objects/Case/fields/Partner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Partner_Reference__c</fullName>
    <description>Dealer&apos;s work order number, shown here for their own reference</description>
    <label>Partner Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>