force-app/main/default/objects/Case/fields/Parts_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Notes__c</fullName>
    <label>Parts Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>