force-app/main/default/objects/Case/fields/Product_Year__c.field-meta.xml
<CustomField>
    <fullName>Product_Year__c</fullName>
    <formula>TEXT(Serial_Number__r.Model_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Year</label>
    <type>Text</type>
</CustomField>