force-app/main/default/objects/Case/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <formula>Promotion_Item__r.Promotion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion</label>
    <type>Text</type>
</CustomField>