force-app/main/default/objects/Case/fields/Promotion_ERP__c.field-meta.xml
<CustomField>
    <fullName>Promotion_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Partner ERP Order which the Promotion Applies to</description>
    <label>Promotion ERP</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Cases (Promotion ERP)</relationshipLabel>
    <relationshipName>Promotion_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>