force-app/main/default/objects/Case/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <formula>Promotion_Item__r.Promotion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PromotionId</label>
    <type>Text</type>
</CustomField>