force-app/main/default/objects/Case/fields/Recoverable_ERP__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recoverable ERP</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Cases (Recoverable ERP)</relationshipLabel>
    <relationshipName>Warranty_Recoverable_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>