force-app/main/default/objects/Case/fields/Recoverable_ERP_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_ERP_Exchange__c</fullName>
    <description>Field that shows the difference in recoverable ERP profit due to exchange</description>
    <formula>IF(Recoverable_ERP__c  &lt;&gt; null  &amp;&amp;  Case_Exchange_Rate__c  &lt;&gt; 0, Recoverable_ERP__r.Profit__c  *  (Case_Exchange_Rate__c - 1), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recoverable ERP Exchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>