force-app/main/default/objects/Case/fields/Requested_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Service_Date__c</fullName>
    <label>Requested Service Date</label>
    <type>DateTime</type>
</CustomField>