force-app/main/default/objects/Case/fields/Serial_Number_Name__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Name__c</fullName>
    <formula>Serial_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number Name</label>
    <type>Text</type>
</CustomField>