force-app/main/default/objects/Case/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrie</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Sudbury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>