force-app/main/default/objects/Case/fields/Shipping_Company_Other__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Other__c</fullName>
    <description>The name of the shipping company if &quot;other&quot; is selected.</description>
    <inlineHelpText>The name of the shipping company if &quot;other&quot; is selected.</inlineHelpText>
    <label>Shipping Company Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>