force-app/main/default/objects/Case/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Shipping Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>