force-app/main/default/objects/Case/fields/Steps_To_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_To_Reproduce__c</fullName>
    <description>List of steps to reproduce the issue</description>
    <label>Steps To Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>