force-app/main/default/objects/Case/fields/Sublet_Price__c.field-meta.xml
<CustomField>
    <fullName>Sublet_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sublet Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>