force-app/main/default/objects/Case/fields/Translator__c.field-meta.xml
<CustomField>
    <fullName>Translator__c</fullName>
    <formula>Knowledge_Article__r.Sent_to_Translator__c</formula>
    <label>Translator</label>
    <type>Text</type>
</CustomField>