force-app/main/default/objects/Case/fields/Vendors__c.field-meta.xml
<CustomField>
    <fullName>Vendors__c</fullName>
    <description>Allows the dealer team to select the vendor associated to the case</description>
    <label>Vendors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoker</fullName>
                <default>true</default>
                <label>Smoker</label>
            </value>
            <value>
                <fullName>Highwater</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Jensen</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Convertex</fullName>
            </value>
            <value>
                <fullName>Camco Manufacturing</fullName>
            </value>
            <value>
                <fullName>Polar Kraft</fullName>
            </value>
            <value>
                <fullName>ASA Electronic</fullName>
            </value>
            <value>
                <fullName>Advanced Textiles</fullName>
            </value>
            <value>
                <fullName>Maslack</fullName>
            </value>
            <value>
                <fullName>Avalon-Tahoe</fullName>
            </value>
            <value>
                <fullName>Wondee Autoparts</fullName>
            </value>
            <value>
                <fullName>Internal Damage</fullName>
            </value>
            <value>
                <fullName>Shipping Damage</fullName>
            </value>
            <value>
                <fullName>Detmar</fullName>
            </value>
            <value>
                <fullName>Billing Another Dealer</fullName>
            </value>
            <value>
                <fullName>Internal Shortage</fullName>
                <isActive>false</isActive>
                <label>Internal Shortage</label>
            </value>
            <value>
                <fullName>Polarkraft</fullName>
                <isActive>false</isActive>
                <label>Polarkraft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>