force-app/main/default/objects/Case/fields/Warranty_ERP__c.field-meta.xml
<CustomField>
    <fullName>Warranty_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty ERP</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Warranty Cases</relationshipLabel>
    <relationshipName>Warranty_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>