force-app/main/default/objects/Case/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <description>Dealer&#39;s work order number, shown here for their own reference</description>
    <label>Work Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>