force-app/main/default/objects/Case/recordTypes/Customer_Community.recordType-meta.xml
<RecordType>
    <fullName>Customer_Community</fullName>
    <active>true</active>
    <businessProcess>CustomerSupport</businessProcess>
    <label>Customer Community</label>
</RecordType>