force-app/main/default/objects/Case/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>true</active>
    <businessProcess>Development</businessProcess>
    <description>For the Dev Team</description>
    <label>Development</label>
</RecordType>