force-app/main/default/objects/Case/recordTypes/Part_Order_Request.recordType-meta.xml
<RecordType>
    <fullName>Part_Order_Request</fullName>
    <active>true</active>
    <businessProcess>Part Order Request</businessProcess>
    <description>Case to request a part to be ordered</description>
    <label>Part Order Request</label>
</RecordType>