force-app/main/default/objects/Case/recordTypes/PartInquiry.recordType-meta.xml
<RecordType>
    <fullName>PartInquiry</fullName>
    <active>true</active>
    <businessProcess>Inquiry</businessProcess>
    <description>Part Inquiry</description>
    <label>PartInquiry</label>
</RecordType>