force-app/main/default/objects/Case/recordTypes/Partner_Support_Process.recordType-meta.xml
<RecordType>
    <fullName>Partner_Support_Process</fullName>
    <active>true</active>
    <businessProcess>Partner Support Process</businessProcess>
    <description>Contact Support</description>
    <label>Partner Support Process</label>
</RecordType>