force-app/main/default/objects/Case/recordTypes/Promotion.recordType-meta.xml
<RecordType>
    <fullName>Promotion</fullName>
    <active>true</active>
    <businessProcess>Promotion</businessProcess>
    <label>Promotion</label>
</RecordType>