force-app/main/default/objects/Case/recordTypes/Report_Request.recordType-meta.xml
<RecordType>
    <fullName>Report_Request</fullName>
    <active>true</active>
    <businessProcess>Report Request</businessProcess>
    <description>Queue for report requests/modifications</description>
    <label>Report Request</label>
</RecordType>