force-app/main/default/objects/Case/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <businessProcess>Salesforce</businessProcess>
    <label>Salesforce</label>
</RecordType>