force-app/main/default/objects/Case/recordTypes/Salesforce_Admin.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Admin</fullName>
    <active>true</active>
    <businessProcess>Admin Salesforce</businessProcess>
    <label>Salesforce Admin</label>
</RecordType>