force-app/main/default/objects/Case/recordTypes/Service_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Service_Appointment</fullName>
    <active>true</active>
    <businessProcess>Service Appointment</businessProcess>
    <label>Service Appointment</label>
</RecordType>