force-app/main/default/objects/Case/recordTypes/Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Support_Case</fullName>
    <active>true</active>
    <businessProcess>Part Order Request</businessProcess>
    <description>For the Customer Community</description>
    <label>Support Case</label>
</RecordType>