force-app/main/default/objects/Case/recordTypes/Translation.recordType-meta.xml
<RecordType>
    <fullName>Translation</fullName>
    <active>true</active>
    <businessProcess>Translation</businessProcess>
    <label>Translation</label>
</RecordType>