force-app/main/default/objects/Case/recordTypes/Warranty.recordType-meta.xml
<RecordType>
    <fullName>Warranty</fullName>
    <active>true</active>
    <businessProcess>Warranty</businessProcess>
    <description>Warranty Claim</description>
    <label>Warranty</label>
</RecordType>