force-app/main/default/objects/Case/recordTypes/Warranty_Returns.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Returns</fullName>
    <active>true</active>
    <businessProcess>Warranty Returns</businessProcess>
    <label>Warranty Returns</label>
</RecordType>