force-app/main/default/objects/Case/validationRules/Status_Denied_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Denied_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Denied&quot;),ISBLANK(TEXT(Denied_Reasons__c) ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select a Denied Reason</errorMessage>
</ValidationRule>