force-app/main/default/objects/Case/validationRules/Status_Goodwill_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Goodwill_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Closed without Recovery&quot;),ISBLANK(TEXT(Goodwill_Reasons__c) ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select a No Recovery Reason</errorMessage>
</ValidationRule>