force-app/main/default/objects/Case/listViews/All_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Service_Appointments</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Full_Name__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Age_del__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Service_Appointment</value>
    </filters>
    <label>All Service Appointments</label>
</ListView>