force-app/main/default/objects/Case/listViews/Closed_Customer_Support_Cases_FR.listView-meta.xml
<ListView>
    <fullName>Closed_Customer_Support_Cases_FR</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Community</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Customer Support Cases FR</label>
    <queue>Customer_Support_Case_FR</queue>
</ListView>