force-app/main/default/objects/Case/listViews/Community_Contact_Support_Inquiries.listView-meta.xml
<ListView>
    <fullName>Community_Contact_Support_Inquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Partner_Support_Process</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,In Review,Accepted,In Progress</value>
    </filters>
    <label>Community Contact Support Inquiries</label>
</ListView>