force-app/main/default/objects/Case/listViews/Customer_Support_Case_FR_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Support_Case_FR_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Support Case FR</label>
    <queue>Customer_Support_Case_FR</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>